# nova-backends

./: .env  .gitignore  .gitmodules  Cargo.toml  docker-compose.yml  karen
adapter/: Cargo.toml
adapter/src/: lib.rs  modules.rs
adapter/src/models/: user.rs
adapter/src/persistence/: postgres.rs
adapter/src/repositories/: mod.rs  user.rs
app/: Cargo.toml
app/src/models/: mod.rs  session.rs  user.rs
app/src/usecases/: user.rs
core/: Cargo.toml
core/src/models/: mod.rs  session.rs  user.rs
core/src/repositories/: session.rs  user.rs
db/: info.json
driver/: Cargo.toml
driver/src/: lib.rs
driver/src/context/: errors.rs  mod.rs  request_helper.rs  response_helper.rs  validate.rs
driver/src/models/: user.rs
driver/src/modules/: mod.rs
driver/src/routes/: system.rs  user.rs
driver/src/startup/: mod.rs
events/triggers/: reboot  shutdown
http_testing/: system.http  user.http
manager/: Dockerfile  index.js  package-lock.json  package.json
manager/utils/: const.js  disk.js
migrations/: 20230810012736_user.sql
nginx/: mime.types  nginx.conf
scripts/: configure  install  memory-monitor  start  status-monitor  stop
scripts/status/: memory  temperture  uptime
scripts/status-server/: set-status  setup-iptables  status-server
scripts/status-server/util/: csrf.py  server.py  status_file.py
statuses/: memory-status.json
templates/: .env-sample  nginx-sample.conf
