[package]
name = "nova-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.5.16"
dotenv = "0.15.0"
nova-adapter = { path = "../adapter" }
nova-app = { path = "../app" }
nova-core = { path = "../core" }
http-body = "0.4.5"
serde = "1.0.171"
tokio = { version = "1.20.0", features = ["full"] }
thiserror = "1.0.41"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
validator = { version = "0.16.1", features = ["derive"] }

